# api-key-scanner

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SUPPORTED_MODELS.md  SUPPORTED_MODELS.zh-CN.md  models.yaml  models_priority13.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml  weekly-fingerprint-collect.yml
scripts/: audit_reference_targets.py  bootstrap_fingerprints.py  collect_all.py  generate_manifest.py  generate_supported_models.py  validate_fingerprints.py
skills/api-verify/: SKILL.md
src/api_key_scanner/: __init__.py  __main__.py  aliases.py  batch_eval.py  evaluation.py  fingerprint_fetch.py  gateway.py  probes.py  report.py  schemas.py  server.py
src/api_key_scanner/data/: aliases.json
src/api_key_scanner/data/probes/: llmmap_v1.jsonl  llmmap_v2.jsonl  met_v1.jsonl  met_v2.jsonl
src/api_key_scanner/detectors/: __init__.py  _met_kernels.py  banner_match.py  fusion.py  llmmap.py  met.py  metadata.py
tests/integration/: test_verify_gateway_e2e.py
tests/unit/: test_aliases.py  test_banner_match.py  test_batch_eval.py  test_collect_scripts.py  test_fingerprint_fetch.py  test_fusion.py  test_gateway.py  test_llmmap.py  test_met.py  test_met_kernels.py  test_metadata.py  test_probes.py  test_report.py  test_server_stub.py
